added the functionality to add busbar components

--- a/templates/about.html
+++ b/templates/about.html
@@ -13,6 +13,7 @@
         <ul>
             <li>Busbar thickness and string thickness are 0.3 mm and 1 mm respectively.</li>
             <li>Insulation thickness is 2 mm in height.</li>
+            <li>New busbar name should start with "sbar".</li>
     </p>
     <!-- Add more about content here -->
 </div>
