working on removing busbars

--- a/templates/manipulate.html
+++ b/templates/manipulate.html
@@ -8,7 +8,6 @@
     {% if filename %}
         {{ filename }}
     {% endif %}
-
     <div class="row custom-col">
         <fieldset class="row custom-col border border-2 rounded-0" style="border-color: #ccc">
             <legend>Strings</legend>
@@ -24,6 +23,7 @@
         <fieldset class="row custom-col border border-2 rounded-0" style="border-color: #ccc">
             <legend>Busbars</legend>
             <div class="row">
+                <div class="col"></div>
                 <div class="col"></div>
                 <div class="col">
                     <span>180 Degree</span>
@@ -47,9 +47,18 @@
                     <span>height</span>
                 </div>
             </div>
-            {% if sbars %}            
+            {% if sbars %}   
+            {% set latestBusbarId1 = 0 %}    
                 {% for sbar in sbars %}
+                {% set BusbarId1 = loop.index0 %}
                 <div class="row mb-2">
+                    <div class="col">
+                        <button type="submit" class="btn btn-danger" onclick="removeBusbar('{{ BusbarId1 }}')">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
+                                <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5"/>
+                            </svg>
+                        </button>
+                    </div>
                     <div class="col">
                     <label for="sbar_{{ sbar }}">{{ sbar }}:</label>
                     </div>
@@ -81,14 +90,25 @@
                                 {% endif %}
                             {% endfor %}
                         {% endif %}
+                        
                     {% endfor %}
-                    
+                    {% set latestBusbarId1 = BusbarId1 %}    
                 </div>
                 {% endfor %}
 
                 {% if manipulate_after_submit_parameters %}
+                {% set latestBusbarId2 = 0 %}
                     {% for i in range(new_sbar_data_length) %}
+                    {% set BusbarId2 = loop.index0 %}
+                    <p>latestBusbarId1: {{ latestBusbarId1 }}</p>
                     <div class="row mb-2">
+                        <div class="col">
+                            <button type="submit" class="btn btn-danger" onclick="removeBusbar('{{ latestBusbarId1+BusbarId2+1 }}')">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
+                                    <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5"/>
+                                </svg>
+                            </button>
+                        </div>
                         <div class="col">
                             <input type="text" style="width: 200px;" class="form-control" name="new_sbar_name" placeholder="Enter name" value="{{ new_sbar_data[i][0] }}">
                         </div>
@@ -114,6 +134,7 @@
                             <input type="number" class="form-control" name="new_outline_width" placeholder="Enter height" step="any" value="{{ new_sbar_data[i][7] }}">
                         </div>
                     </div>
+                    {% set latestBusbarId2 = BusbarId2 %}
                     {% endfor %}
                 {% endif %}
 
@@ -122,15 +143,34 @@
             <div class="col">
                 <button type="button" style="width: 500px;" class="btn btn-secondary" id="add-row-btn">Add</button>
             </div>
-            <div class="col">
-                <button type="button" style="width: 500px;" class="btn btn-danger" id="remove-row-btn">Remove</button>
-            </div>
         </fieldset>
     </div>
     <button type="submit" class="btn btn-outline-primary" id="submit-btn">Submit Parameters</button>
-    <div id="error-message" style="color: red; display: none;">Please fill in all required fields.</div>
 
     <script>
+        function removeBusbar(busbarId) {
+                console.log('Removing busbar:', busbarId);
+                // Create a form data object
+                const formData = new FormData();
+                formData.append('busbar_id', busbarId);
+
+                // Send a POST request to /remove_busbar
+                fetch('/remove_busbar', {
+                    method: 'POST',
+                    body: formData
+                }).then(response => {
+                    if (response.ok) {
+                        // Handle successful removal, e.g., reload the page or update the UI
+                        location.reload();
+                    } else {
+                        // Handle errors
+                        console.error('Failed to remove busbar');
+                    }
+                }).catch(error => {
+                    console.error('Error:', error);
+                });
+        }
+
         document.addEventListener('DOMContentLoaded', function() {
             // Function to prevent form submission on Enter key press in input fields
             function preventEnterKeySubmission(event) {
@@ -174,6 +214,13 @@
                 newRow.className = 'row mb-2';
                 newRow.innerHTML = `
                     <div class="col">
+                        <button type="submit" class="btn btn-danger" onclick="removeBusbar('{{ latestBusbarId1+latestBusbarId2+${existingRows}+1 }}')">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
+                                <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5"/>
+                            </svg>
+                        </button>
+                    </div>
+                    <div class="col">
                         <input type="text" style="width: 200px;" class="form-control" name="new_sbar_name_dyn" placeholder="Enter name">
                     </div>
                     <div class="col">
@@ -213,13 +260,6 @@
                 });
             });
             
-            document.getElementById('remove-row-btn').addEventListener('click', function() {
-                const existingRows = document.getElementById('existing-rows');
-                if (existingRows.lastChild) {
-                    existingRows.removeChild(existingRows.lastChild);
-                }
-            });
-
             document.getElementById('submit-btn').addEventListener('click', function(event) {
                 const sbarNameInput = document.getElementById('sbar-name-input');
                 if (sbarNameInput.value.trim() === '') {
