moved all js to scripts.js and added warning messages for the submit button if not all busbar fields are filled in correctly

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 <body>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     <nav class="navbar fixed-top bg-body-tertiary navbar-expand-lg navbar-light bg-light px-3">
         <a class="navbar-brand" href="#">
             <img src="{{ fig_dir }}" width="80" height="30" class="d-inline-block align-text-top me-3">
